// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateBills > calculates bills for renters only 1`] = `
{
  "billsToInsert": [
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 240,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterA",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 2400,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 240,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterB",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 4800,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 240,
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 1200,
      "totalCost": 7200,
    },
  ],
  "consumptionRecordsToInsert": [],
}
`;

exports[`calculateBills > calculates bills for renters with measuring devices 1`] = `
{
  "billsToInsert": [
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 600,
      "occupantId": "occupant_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 100,
      "totalCost": 600,
    },
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 110,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterA",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 1100,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 110,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterB",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 2200,
    },
    {
      "billedArea": 30,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 110,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 3300,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 110,
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 1200,
      "totalCost": 7200,
    },
  ],
  "consumptionRecordsToInsert": [
    {
      "consumption": 100,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`calculateBills > calculates bills for renters, renters with measuring devices and owners 1`] = `
{
  "billsToInsert": [
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 600,
      "occupantId": "occupant_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 100,
      "totalCost": 600,
    },
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 303.3,
      "occupantId": "occupant_ownerA",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 50.55,
      "totalCost": 303.3,
    },
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 450.72,
      "occupantId": "occupant_ownerB",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 75.12,
      "totalCost": 450.72,
    },
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 127.433,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterA",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 1274.33,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 127.433,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterB",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 2548.66,
    },
    {
      "billedArea": 30,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 127.433,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 3822.99,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 127.433,
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 1500,
      "totalCost": 9000,
    },
  ],
  "consumptionRecordsToInsert": [
    {
      "consumption": 100,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_renterWithDevice",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
    {
      "consumption": 50.55,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_ownerA",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
    {
      "consumption": 75.12,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_ownerB",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`calculateBills > handles real world calculation scenario 1`] = `
{
  "billsToInsert": [
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 900,
      "occupantId": "occupant_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 150,
      "totalCost": 900,
    },
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "measuredCost": 1200,
      "occupantId": "occupant_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 200,
      "totalCost": 1200,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 90,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renter1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 1800,
    },
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 90,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renter2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 900,
    },
    {
      "billedArea": 50,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 90,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "occupantId": "occupant_renter3",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 4500,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 90,
      "costPerUnit": 6,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 1550,
      "totalCost": 9300,
    },
  ],
  "consumptionRecordsToInsert": [
    {
      "consumption": 150,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
    {
      "consumption": 200,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "electricity",
      "measuringDeviceId": "measurement_record_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`calculateBills > handles real world calculation scenario 2`] = `
{
  "billsToInsert": [
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 88.22,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "fixedCost": undefined,
      "measuredCost": 264.66,
      "occupantId": "occupant_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 3,
      "totalCost": 264.66,
    },
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 88.22,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "fixedCost": undefined,
      "measuredCost": 573.43,
      "occupantId": "occupant_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 6.5,
      "totalCost": 573.43,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 2.315775,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "occupantId": "occupant_renter1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 46.3155,
    },
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 2.315775,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "occupantId": "occupant_renter2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 23.15775,
    },
    {
      "billedArea": 50,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 2.315775,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "occupantId": "occupant_renter3",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 115.78875,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 2.315775,
      "costPerUnit": 88.22,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 11.6,
      "totalCost": 1023.352,
    },
  ],
  "consumptionRecordsToInsert": [
    {
      "consumption": 3,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "measuringDeviceId": "measurement_record_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
    {
      "consumption": 6.5,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "water",
      "measuringDeviceId": "measurement_record_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`calculateBills > handles real world calculation scenario 3`] = `
{
  "billsToInsert": [
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "fixedCost": undefined,
      "measuredCost": 1967.792105263158,
      "occupantId": "occupant_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 5,
      "totalCost": 1967.792105263158,
    },
    {
      "billingPeriodId": "billing_period_1",
      "costPerUnit": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "fixedCost": 64.02048655569783,
      "measuredCost": 3935.584210526316,
      "occupantId": "occupant_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 10,
      "totalCost": 3999.6046970820134,
    },
    {
      "billedArea": 20,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "occupantId": "occupant_renter1",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 7871.168421052632,
    },
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "occupantId": "occupant_renter2",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 3935.584210526316,
    },
    {
      "billedArea": 50,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "occupantId": "occupant_renter3",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 19677.92105263158,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 393.55842105263156,
      "costPerUnit": 393.55842105263156,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "fixedCost": 5000,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 95,
      "totalCost": 42388.05,
    },
    {
      "billingPeriodId": "billing_period_1",
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "fixedCost": 4935.979513444302,
      "occupantId": "occupant_oliera",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 0,
      "totalCost": 4935.979513444302,
    },
  ],
  "consumptionRecordsToInsert": [
    {
      "consumption": 5,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "measuringDeviceId": "measurement_record_owner1",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
    {
      "consumption": 10,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "measuringDeviceId": "measurement_record_owner2",
      "startDate": 2024-01-01T00:00:00.000Z,
    },
  ],
}
`;

exports[`calculateBills > handles zero total consumption 1`] = `
{
  "billsToInsert": [
    {
      "billedArea": 10,
      "billingPeriodId": "billing_period_1",
      "costPerSquareMeter": 900,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "occupantId": "occupant_renterA",
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalCost": 9000,
    },
    {
      "billingPeriodId": "billing_period_1",
      "buildingId": "building_1",
      "costPerSquareMeter": 900,
      "costPerUnit": 0,
      "endDate": 2024-01-31T00:00:00.000Z,
      "energyType": "heating",
      "fixedCost": undefined,
      "startDate": 2024-01-01T00:00:00.000Z,
      "totalConsumption": 0,
      "totalCost": 9000,
    },
  ],
  "consumptionRecordsToInsert": [],
}
`;
